--- a/src/index.css
+++ b/src/index.css
@@ -39,8 +39,11 @@ body {
 
 canvas {
   display: block;
-  width: 100%;
-  height: 100%;
+  width: 100vw !important;
+  height: 100vh !important;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
 h1 {
